<?xml version="1.0"?>
<package>
  <name>compress_transport</name>
  <version>0.0.0</version>
  <description>The compressd image to image package</description>

  <maintainer email="erle@todo.todo">erle</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>
